Trying to update to ForgeGradle 3

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,5 @@ modGroup=com.gamesense
 modVersion=d2.2.8
 modBaseName=gamesense
 forgeVersion=1.12.2-14.23.5.2768
+minecraftVersion=1.12.2
 mcpVersion=snapshot_20180814
