--- a/build.gradle
+++ b/build.gradle
@@ -11,29 +11,43 @@ buildscript {
 		}
 	}
 	dependencies {
-		classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
-		classpath 'org.spongepowered:mixingradle:0.4-SNAPSHOT'
-		classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
+		classpath 'net.minecraftforge.gradle:ForgeGradle:3.+'
+		classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+		classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
 	}
 }
 
-apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 version project.modVersion
 group project.modGroup
 
+configurations {
+    embed
+    compile.extendsFrom(embed)
+}
+
 compileJava {
 	sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 minecraft {
-	version = project.forgeVersion
+	mappings channel: 'stable', version: '39-1.12'
+	runs {
+		client {
+			workingDirectory project.file('run')
+			property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+			property 'forge.logging.console.level', 'debug'
+		}
+	}
+	/*version = project.forgeVersion
 	runDir = 'run'
 	mappings = project.mcpVersion
 	coreMod = 'com.gamesense.mixin.GameSenseMixinLoader'
-	makeObfSourceJar = false
+	makeObfSourceJar = false*/
+	//coreMod = 'com.gamesense.mixin.GameSenseMixinLoader'
 }
 
 repositories {
@@ -61,27 +75,28 @@ repositories {
 }
 
 dependencies {
-	compile('org.spongepowered:mixin:0.7.4-SNAPSHOT') {
+	minecraft('net.minecraftforge:forge:1.12.2-14.23.5.2854')
+	shadow('org.spongepowered:mixin:0.7.4-SNAPSHOT') {
 		exclude module: 'launchwrapper'
 		exclude module: 'guava'
 		exclude module: 'gson'
 		exclude module: 'commons-io'
 	}
-	compile 'com.github.ZeroMemes:Alpine:1.5'
-	compile group: 'net.jodah', name: 'typetools', version: '0.5.0'
-	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-	compile group: 'club.minnced', name: 'java-discord-rpc', version: '2.0.1'
-	compile('com.lukflug:panelstudio:0.1.8')
-	compile('com.lukflug:panelstudio-mc12:0.1.8')
+	shadow('com.github.ZeroMemes:Alpine:1.5')
+	shadow('net.jodah:typetools:0.5.0')
+	shadow('com.googlecode.json-simple:json-simple:1.1.1')
+	shadow('club.minnced:java-discord-rpc:2.0.1')
+	shadow('com.lukflug:panelstudio:0.1.8')
+	shadow('com.lukflug:panelstudio-mc12:0.1.8')
 }
 
 processResources {
 	inputs.property 'version', project.version
-	inputs.property 'mcversion', project.minecraft.version
+	inputs.property 'mcversion', project.minecraftVersion
 
 	from(sourceSets.main.resources.srcDirs) {
 		include 'mcmod.info'
-		expand 'version': project.version, 'mcversion': project.minecraft.version
+		expand 'version': project.version, 'mcversion': project.minecraftVersion
 	}
 
 	from(sourceSets.main.resources.srcDirs) {
@@ -92,44 +107,37 @@ processResources {
 }
 
 shadowJar {
-	dependencies {
-		include(dependency('org.spongepowered:mixin'))
-		include(dependency('com.github.ZeroMemes:Alpine'))
-		include(dependency('net.jodah:typetools'))
-		include(dependency('com.googlecode.json-simple:json-simple:1.1.1'))
-		include(dependency('club.minnced:java-discord-rpc:2.0.1'))
-		include(dependency('com.lukflug:panelstudio'))
-		include(dependency('com.lukflug:panelstudio-mc12'))
-	}
-	exclude 'dummyThing'
-	exclude 'LICENSE.txt'
-	classifier = 'release'
+    configurations = [project.configurations.shadow]
+    exclude("dummyThing")
+    exclude("LICENSE.txt")
+    setClassifier("release")
 }
 
 mixin {
-	defaultObfuscationEnv searge
+	defaultObfuscationEnv 'searge'
 	add sourceSets.main, 'mixins.gamesense.refmap.json'
 }
 
 reobf {
 	shadowJar {
-		mappingType = 'SEARGE'
 		classpath = sourceSets.main.compileClasspath
 	}
 }
 
 jar {
+	from configurations.embed.collect { it.isDirectory() ? it : zipTree(it) }
 	manifest {
 		attributes(
-				'MixinConfigs': 'mixins.gamesense.json',
-				'tweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
-				'TweakOrder': 0,
-				'FMLCorePluginContainsFMLMod': 'true',
-				'FMLCorePlugin': 'com.gamesense.mixin.GameSenseMixinLoader',
-				'ForceLoadAsMod': 'true',
-				'FMLAT': 'gamesense_at.cfg'
+			'MixinConfigs': 'mixins.gamesense.json',
+			'tweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
+			'TweakOrder': 0,
+			'FMLCorePluginContainsFMLMod': 'true',
+			'FMLCorePlugin': 'com.gamesense.mixin.GameSenseMixinLoader',
+			'ForceLoadAsMod': 'true',
+			'FMLAT': 'gamesense_at.cfg'
 		)
 	}
 }
 
-build.dependsOn(shadowJar)
+jar.dependsOn(shadowJar) 
+
