--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,21 @@
 org.gradle.jvmargs=-Xmx3G
+
 modGroup=com.gamesense
 modVersion=d2.2.8
 modBaseName=gamesense
-forgeVersion=1.12.2-14.23.5.2768
+
 minecraftVersion=1.12.2
-mcpVersion=snapshot_20180814
+forgeVersion=14.23.5.2854
+mcpVersion=39-1.12
+mixinVersion=0.7.11-SNAPSHOT
+mixinProcessor=0.8.2
+alpineVersion=1.7
+typetoolsVersion=0.6.2
+jsonVersion=1.1.1
+discordVersion=2.0.1
+psVersion=0.1.8
+psmcVersion=0.1.8
+
+forgegradleVersion=3.0.190
+mixingradleVersion=0.7-SNAPSHOT
+shadowVersion=4.0.4
